--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,4 +37,8 @@ button {
   display: inline-block;
   background-color: transparent;
 }
+
+body {
+  font-family: "Poppins", sans-serif;
+}
 /*# sourceMappingURL=main.css.map */
