--- a/assets/scss/abstracts/_reset.scss
+++ b/assets/scss/abstracts/_reset.scss
@@ -12,7 +12,9 @@ h5,
 h6,
 ul,
 ol,
-li {
+li,
+p {
+	padding: 0;
 	margin: 0;
 }
 
@@ -36,6 +38,11 @@ button {
 	background-color: transparent;
 }
 
+a {
+	text-decoration: none;
+}
+
 body {
+	font-weight: 400;
 	font-family: "Poppins", sans-serif;
 }
