--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,6 +7,7 @@
 // component
 @import "components/button";
 @import "components/cards";
+@import "components/input-field";
 
 // Layouts
 @import "layouts/about";
