--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,12 +49,26 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+.instagram .heading h2 {
+  color: #1d1d1d;
+  font-size: 40px;
+  line-height: 48px;
+  font-family: "nulshock";
+}
+
+@media (max-width: 767px) {
+  .instagram .heading h2 {
+    font-size: 25px;
+    line-height: 30px;
+  }
+}
+
 .header .nav-item select, .header .nav-link {
   font-size: 14px;
   line-height: 21px;
 }
 
-.footer-menu h2 {
+.footer-menu h2, .instagram .heading p {
   font-size: 18px;
   line-height: 21.6px;
 }
@@ -69,6 +83,26 @@ body {
   background-color: #ff0020;
   padding: 11px 21px !important;
   box-shadow: 0px 4px 20px 0px #ff00201a;
+}
+
+.ig-card {
+  width: 100%;
+  height: 238px;
+  overflow: hidden;
+  position: relative;
+}
+
+.ig-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.ig-card a {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
 }
 
 .input-field {
@@ -531,6 +565,34 @@ body {
     height: 28px;
     margin: auto;
     padding: 7px 20px !important;
+  }
+}
+
+.instagram {
+  position: relative;
+  padding-top: 140px;
+}
+
+.instagram .heading {
+  text-align: center;
+  margin-bottom: 55px;
+}
+
+@media (max-width: 767px) {
+  .instagram .heading {
+    margin-bottom: 30px;
+  }
+}
+
+.instagram .heading p {
+  color: #ff0020;
+  font-weight: 700;
+}
+
+@media (max-width: 767px) {
+  .instagram .heading p {
+    font-size: 16px;
+    line-height: 22.4px;
   }
 }
 /*# sourceMappingURL=main.css.map */
