--- a/assets/scss/components/_cards.scss
+++ b/assets/scss/components/_cards.scss
@@ -17,3 +17,41 @@
 		position: absolute;
 	}
 }
+
+.testimonial-card {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	.quote {
+		flex-shrink: 0;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background-color: $primary;
+
+		@include max(991px) {
+			grid-column: 1/-1;
+			padding: 40px 0px;
+		}
+	}
+
+	.info {
+		z-index: 1;
+		position: relative;
+		grid-column: 2 span;
+
+		@include max(991px) {
+			grid-column: 1/-1;
+		}
+
+		&::after {
+			top: 0;
+			left: 0;
+			z-index: -1;
+			content: "";
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			background-color: rgba(0, 0, 0, 0.8);
+		}
+	}
+}
