--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,7 +28,6 @@ input,
 button {
   border: 0px;
 }
-
 input:focus,
 button:focus {
   outline: none;
@@ -49,26 +48,25 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-.choose-info .heading h2, .choose-img__info h2, .instagram .heading h2, .product .heading h2 {
+.product .heading h2, .instagram .heading h2, .banner-info h2, .choose-img__info h2, .choose-info .heading h2 {
   color: #1d1d1d;
   font-size: 40px;
   line-height: 48px;
   font-family: "nulshock";
 }
-
 @media (max-width: 767px) {
-  .choose-info .heading h2, .choose-img__info h2, .instagram .heading h2, .product .heading h2 {
+  .product .heading h2, .instagram .heading h2, .banner-info h2, .choose-img__info h2, .choose-info .heading h2 {
     font-size: 25px;
     line-height: 30px;
   }
 }
 
-.header .nav-item select, .header .nav-link {
+.header .nav-link, .header .nav-item select {
   font-size: 14px;
   line-height: 21px;
 }
 
-.choose-info ul li h2, .footer-menu h2, .instagram .heading p {
+.instagram .heading p, .footer-menu h2, .choose-info ul li h2 {
   font-size: 18px;
   line-height: 21.6px;
 }
@@ -82,7 +80,7 @@ body {
   text-transform: capitalize;
   background-color: #ff0020;
   padding: 11px 21px !important;
-  box-shadow: 0px 4px 20px 0px #ff00201a;
+  box-shadow: 0px 4px 20px 0px rgba(255, 0, 32, 0.1019607843);
 }
 
 .ig-card {
@@ -91,13 +89,12 @@ body {
   overflow: hidden;
   position: relative;
 }
-
 .ig-card img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-
 .ig-card a {
   top: 50%;
   left: 50%;
@@ -109,7 +106,6 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
-
 .testimonial-card .quote {
   flex-shrink: 0;
   display: flex;
@@ -117,26 +113,22 @@ body {
   justify-content: center;
   background-color: #ff0020;
 }
-
 @media (max-width: 991px) {
   .testimonial-card .quote {
     grid-column: 1/-1;
     padding: 40px 0px;
   }
 }
-
 .testimonial-card .info {
   z-index: 1;
   position: relative;
   grid-column: 2 span;
 }
-
 @media (max-width: 991px) {
   .testimonial-card .info {
     grid-column: 1/-1;
   }
 }
-
 .testimonial-card .info::after {
   top: 0;
   left: 0;
@@ -156,18 +148,21 @@ body {
   background-color: #fff;
   border: 1px solid #d9d9d9;
 }
-
 .input-field input {
   width: 100%;
   font-size: 14px;
   line-height: 19.07px;
   padding: 24px 25px;
 }
-
+.input-field input::-moz-placeholder {
+  color: #747474;
+}
+.input-field input:-ms-input-placeholder {
+  color: #747474;
+}
 .input-field input::placeholder {
   color: #747474;
 }
-
 .input-field button {
   top: 50%;
   width: 138px;
@@ -182,62 +177,51 @@ body {
   padding: 80px 0px;
   background-color: #f6f6f6;
 }
-
 @media (max-width: 767px) {
   .choose {
     padding: 30px 0px;
   }
 }
-
 .choose-info .heading {
   padding-left: 20px;
   margin-bottom: 70px;
   border-left: 7px solid #ff0020;
 }
-
 @media (max-width: 991px) {
   .choose-info .heading {
     margin-bottom: 34px;
   }
 }
-
 .choose-info .heading h2 {
   padding-bottom: 16px;
 }
-
 .choose-info .heading p {
   max-width: 470px;
   font-size: 16px;
   color: #747474;
   line-height: 22.4px;
 }
-
 @media (max-width: 991px) {
   .choose-info .heading p {
     max-width: 100%;
   }
 }
-
 .choose-info ul li {
   margin-bottom: 70px;
 }
-
 @media (max-width: 575px) {
   .choose-info ul li {
     margin-bottom: 20px;
   }
 }
-
 .choose-info ul li:nth-last-child(1) {
   margin: 0;
 }
-
 .choose-info ul li h2 {
   color: #000;
   margin-bottom: 16px;
   font-family: "nulshock";
 }
-
 @media (max-width: 575px) {
   .choose-info ul li h2 {
     font-size: 15px;
@@ -245,47 +229,41 @@ body {
     margin-bottom: 10px;
   }
 }
-
 .choose-info ul li p {
   font-size: 16px;
   color: #747474;
   max-width: 470px;
   line-height: 22.4px;
 }
-
 @media (max-width: 991px) {
   .choose-info ul li p {
     max-width: 100%;
   }
 }
-
 @media (max-width: 575px) {
   .choose-info ul li p {
     font-size: 12px;
     line-height: 16.8px;
   }
 }
-
 .choose-img {
   width: 100%;
   height: 700px;
   overflow: hidden;
   position: relative;
 }
-
 @media (max-width: 991px) {
   .choose-img {
     height: 380px;
     margin-bottom: 20px;
   }
 }
-
 .choose-img > img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-
 .choose-img__info {
   top: 0;
   left: 0;
@@ -298,12 +276,10 @@ body {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.6);
 }
-
 .choose-img__info h2 {
   color: #fff;
   margin-bottom: 12px;
 }
-
 .choose-img__info a {
   width: 60px;
   height: 60px;
@@ -312,9 +288,20 @@ body {
   align-items: center;
   justify-content: center;
   background-color: #fff;
-  animation: pulse 1.6s infinite;
+  -webkit-animation: pulse 1.6s infinite;
+          animation: pulse 1.6s infinite;
 }
-
+@-webkit-keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgba(204, 255, 255, 0.6);
+  }
+  70% {
+    box-shadow: 0 0 0 20px rgba(255, 255, 255, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+  }
+}
 @keyframes pulse {
   0% {
     box-shadow: 0 0 0 0 rgba(204, 255, 255, 0.6);
@@ -327,25 +314,147 @@ body {
   }
 }
 
+.banner {
+  padding-top: 240px;
+  position: relative;
+  overflow: hidden;
+  background-color: #fff;
+}
+@media (max-width: 991px) {
+  .banner {
+    padding-top: 0px;
+  }
+}
+.banner-content {
+  padding-top: 60px;
+  padding-bottom: 100px;
+  background-color: #F6F6F6;
+}
+@media (max-width: 991px) {
+  .banner-content {
+    padding-top: 660px;
+  }
+}
+@media (max-width: 767px) {
+  .banner-content {
+    padding-top: 490px;
+    padding-bottom: 30px;
+  }
+}
+@media (max-width: 425px) {
+  .banner-content {
+    padding-top: 440px;
+  }
+}
+.banner-content-bottom {
+  padding: 100px 0px;
+  background-color: #ff0020;
+}
+.banner-content-bottom__info {
+  text-align: center;
+}
+.banner-content-bottom__info h2 {
+  color: #fff;
+  font-size: 40px;
+  line-height: 48px;
+  margin-bottom: 18px;
+  font-family: "nulshock";
+}
+.banner-content-bottom__info p {
+  color: #fff;
+  font-size: 16px;
+  line-height: 22.2px;
+  max-width: 780px;
+  margin: auto;
+}
+@media (max-width: 991px) {
+  .banner-info {
+    text-align: center;
+  }
+}
+.banner-info h2 {
+  margin-bottom: 18px;
+}
+@media (max-width: 767px) {
+  .banner-info h2 {
+    margin-bottom: 10px;
+  }
+}
+.banner-info p {
+  font-size: 16px;
+  color: #747474;
+  line-height: 22.4px;
+  margin-bottom: 18px;
+}
+.banner-info a.button {
+  width: 190px;
+  height: 44px;
+  text-align: center;
+}
+@media (max-width: 767px) {
+  .banner-info a.button {
+    display: flex;
+    width: 124px;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    padding: 7px 14px !important;
+  }
+}
+.banner-overlay {
+  left: -100px;
+  top: -40px;
+  position: absolute;
+}
+@media (max-width: 1380px) {
+  .banner-overlay {
+    top: 130px;
+  }
+}
+@media (max-width: 991px) {
+  .banner-overlay {
+    top: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+@media (max-width: 425px) {
+  .banner-overlay {
+    top: 110px;
+  }
+}
+@media (max-width: 1380px) {
+  .banner-overlay img {
+    max-width: 680px;
+  }
+}
+@media (max-width: 767px) {
+  .banner-overlay img {
+    max-width: 480px;
+  }
+}
+@media (max-width: 425px) {
+  .banner-overlay img {
+    max-width: 320px;
+  }
+}
+
 .footer {
   overflow: hidden;
   position: relative;
   background-color: #f6f6f6;
 }
-
 .footer-top {
   padding: 50px 0px;
   padding-bottom: 45px;
   border-bottom: 2px solid #d9d9d9;
 }
-
 .footer-top-subscribe {
   display: flex;
   margin-top: 50px;
   align-items: flex-end;
   justify-content: space-between;
 }
-
 @media (max-width: 991px) {
   .footer-top-subscribe {
     margin-top: 16px;
@@ -353,21 +462,17 @@ body {
     align-items: flex-start;
   }
 }
-
 .footer-top-subscribe ul {
   display: flex;
   align-items: center;
 }
-
 .footer-top-subscribe ul li {
   margin-right: 20px;
 }
-
 .footer-bottom {
   padding-top: 22px;
   padding-bottom: 34px;
 }
-
 .footer-bottom p {
   font-size: 16px;
   color: #333333;
@@ -375,58 +480,48 @@ body {
   text-align: center;
   text-transform: capitalize;
 }
-
 @media (max-width: 991px) {
   .footer-info {
     margin-bottom: 28px;
   }
 }
-
 .footer-info .logo {
   margin-bottom: 18px;
 }
-
 .footer-info p {
   font-size: 16px;
   color: #747474;
   line-height: 24px;
   margin-bottom: 30px;
 }
-
 @media (max-width: 575px) {
   .footer-info p {
     font-size: 10px;
     line-height: 15px;
   }
 }
-
 .footer-info ul {
   display: flex;
   align-items: center;
 }
-
 .footer-info ul li {
   margin-right: 20px;
 }
-
 @media (max-width: 991px) {
   .footer-menu {
     margin-bottom: 38px;
   }
 }
-
 @media (max-width: 767px) {
   .footer-menu {
     margin-bottom: 24px;
   }
 }
-
 .footer-menu h2 {
   color: #333333;
   margin-bottom: 20px;
   font-family: "nulshock";
 }
-
 @media (max-width: 575px) {
   .footer-menu h2 {
     font-size: 12px;
@@ -434,17 +529,14 @@ body {
     margin-bottom: 15px;
   }
 }
-
 .footer-menu ul li {
   margin-bottom: 5px;
 }
-
 @media (max-width: 575px) {
   .footer-menu ul li {
     margin-bottom: 4px;
   }
 }
-
 .footer-menu ul li a,
 .footer-menu ul li p {
   font-size: 16px;
@@ -452,42 +544,35 @@ body {
   line-height: 24px;
   transition: all 0.3s linear;
 }
-
 @media (max-width: 575px) {
   .footer-menu ul li a,
-  .footer-menu ul li p {
+.footer-menu ul li p {
     font-size: 10px;
     line-height: 15px;
   }
 }
-
 .footer-menu ul li a:hover,
 .footer-menu ul li p:hover {
   color: #333333;
 }
-
 .footer-menu ul li a span,
 .footer-menu ul li p span {
   margin-right: 16px;
 }
-
 .footer-menu ul li p {
   display: flex;
   align-items: center;
 }
-
 @media (max-width: 991px) {
   .footer-field {
     margin-top: 40px;
   }
 }
-
 @media (max-width: 767px) {
   .footer-field {
     width: 100%;
   }
 }
-
 .footer-field h2 {
   font-size: 20px;
   color: #333333;
@@ -495,7 +580,6 @@ body {
   margin-bottom: 16px;
   font-family: "nulshock";
 }
-
 @media (max-width: 575px) {
   .footer-field h2 {
     font-size: 12px;
@@ -503,13 +587,11 @@ body {
     margin-bottom: 9px;
   }
 }
-
 @media (max-width: 767px) {
   .footer-field .input-field {
     width: 100%;
   }
 }
-
 @media (max-width: 575px) {
   .footer-field .input-field input {
     font-size: 10px;
@@ -517,7 +599,6 @@ body {
     line-height: 13.05px;
   }
 }
-
 @media (max-width: 575px) {
   .footer-field .input-field button {
     font-size: 9px;
@@ -535,17 +616,14 @@ body {
   z-index: 9999;
   position: fixed;
 }
-
 .header.sticky .navbar {
   padding: 14px 0px;
-  box-shadow: 0px 4px 20px 0px #0000000d;
+  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.0509803922);
 }
-
 .header .dropdown-menu {
   left: auto;
   right: 0;
 }
-
 @media (max-width: 991px) {
   .header .dropdown-menu {
     margin: 0;
@@ -553,7 +631,6 @@ body {
     padding: 0;
   }
 }
-
 .header .dropdown-item {
   color: #747474;
   font-size: 12px;
@@ -561,53 +638,44 @@ body {
   text-align: right;
   font-weight: 500;
 }
-
 @media (max-width: 991px) {
   .header .dropdown-item {
     padding: 4px 0px;
   }
 }
-
 .header .dropdown-item:hover {
   color: #fff;
   background-color: #ff0020;
 }
-
 @media (max-width: 991px) {
   .header .dropdown-item:hover {
     color: inherit;
     background-color: transparent;
   }
 }
-
 .header .navbar {
   padding: 28px 0px;
   background-color: #fff;
   transition: all 0.3s linear;
 }
-
 @media (max-width: 991px) {
   .header .navbar {
-    box-shadow: 0px 4px 20px 0px #0000000d;
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.0509803922);
   }
 }
-
 @media (max-width: 991px) {
   .header .navbar {
     padding: 13px 0px;
   }
 }
-
 .header .navbar-nav {
   align-items: center;
 }
-
 @media (max-width: 991px) {
   .header .navbar-nav {
     align-items: flex-end;
   }
 }
-
 @media (max-width: 575px) {
   .header .navbar-nav {
     top: 100%;
@@ -617,16 +685,14 @@ body {
     position: absolute;
     padding: 18px 30px;
     background-color: #fff;
-    box-shadow: 0px 4px 10px 0px #0000001a;
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1019607843);
   }
 }
-
 @media (max-width: 575px) {
   .header .navbar-nav {
     right: 12px;
   }
 }
-
 .header .navbar-toggler {
   border: 0;
   padding: 0px;
@@ -634,32 +700,26 @@ body {
   transform: rotate(90deg);
   transition: all 0.2s ease-in-out;
 }
-
 .header .navbar-toggler.collapsed {
   transform: rotate(0deg);
 }
-
 .header .navbar-toggler:focus, .header .navbar-toggler:active {
   border: 0px;
   outline: none;
   box-shadow: none;
 }
-
 .header .navbar-brand {
   padding: 0;
 }
-
 .header .nav-item {
   margin-right: 48px;
 }
-
 @media (max-width: 991px) {
   .header .nav-item {
     margin: 0;
     margin-bottom: 16px;
   }
 }
-
 .header .nav-item select {
   border: 0;
   padding: 0;
@@ -667,30 +727,25 @@ body {
   font-weight: 700;
   text-transform: uppercase;
 }
-
 @media (min-width: 992px) {
   .header .nav-item select {
     margin-left: -24px;
   }
 }
-
 .header .nav-item select:focus {
   outline: none;
 }
-
 @media (max-width: 991px) {
   .header .nav-item:nth-last-child(2) {
     width: 100%;
     padding-top: 24px;
   }
 }
-
 @media (max-width: 575px) {
   .header .nav-item:nth-last-child(2) {
     padding-top: 70px;
   }
 }
-
 @media (max-width: 991px) {
   .header .nav-item:nth-last-child(1) {
     margin: 0;
@@ -700,37 +755,30 @@ body {
     justify-content: center;
   }
 }
-
 .header .nav-link {
   color: #333333;
   font-weight: 700;
   padding: 0 !important;
   transition: all 0.3s linear;
 }
-
 @media (max-width: 991px) {
   .header .nav-link {
     text-align: right;
   }
 }
-
 .header .nav-link:hover {
   color: #ff0020;
 }
-
 .header .nav-link:hover.dropdown-toggle::after {
   border-color: #ff0020;
 }
-
 .header .nav-link.dropdown-toggle.show {
   color: #ff0020;
 }
-
 .header .nav-link.dropdown-toggle.show::after {
   border-color: #ff0020;
   transform: rotate(-138deg);
 }
-
 .header .nav-link.dropdown-toggle::after {
   content: "";
   padding: 3px;
@@ -743,7 +791,6 @@ body {
   transition: all 0.3s linear;
   border-width: 0 2.6px 2.6px 0;
 }
-
 .header .nav-link.button {
   width: 108px;
   height: 45px;
@@ -752,7 +799,6 @@ body {
   align-items: center;
   justify-content: center;
 }
-
 @media (max-width: 991px) {
   .header .nav-link.button {
     height: 28px;
@@ -765,29 +811,24 @@ body {
   position: relative;
   padding-top: 140px;
 }
-
 @media (max-width: 991px) {
   .instagram {
     padding-top: 60px;
   }
 }
-
 .instagram .heading {
   text-align: center;
   margin-bottom: 55px;
 }
-
 @media (max-width: 767px) {
   .instagram .heading {
     margin-bottom: 30px;
   }
 }
-
 .instagram .heading p {
   color: #ff0020;
   font-weight: 700;
 }
-
 @media (max-width: 767px) {
   .instagram .heading p {
     font-size: 16px;
@@ -798,55 +839,48 @@ body {
 .product {
   overflow: hidden;
   padding: 80px 0px;
+  overflow: hidden;
   position: relative;
 }
-
 .product .heading {
   text-align: center;
   margin-bottom: 80px;
 }
-
 .product .heading h2 {
   margin-bottom: 16px;
 }
-
 .product .heading p {
   max-width: 780px;
   margin: 0px auto;
 }
-
 @media (max-width: 991px) {
   .product .heading p {
     max-width: 100%;
   }
 }
-
 @media (max-width: 991px) {
   .product-content {
     margin-bottom: 60px;
   }
 }
-
 .product-img {
   width: 100%;
   height: 500px;
   overflow: hidden;
   position: relative;
 }
-
 @media (max-width: 991px) {
   .product-img {
     height: 240px;
     margin-bottom: 24px;
   }
 }
-
 .product-img img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
-
 .product-info h2 {
   color: #ff0020;
   font-size: 30px;
@@ -854,13 +888,11 @@ body {
   margin-bottom: 35px;
   font-family: "nulshock";
 }
-
 @media (max-width: 991px) {
   .product-info h2 {
     text-align: center;
   }
 }
-
 @media (max-width: 575px) {
   .product-info h2 {
     font-size: 18px;
@@ -868,42 +900,35 @@ body {
     margin-bottom: 10px;
   }
 }
-
 .product-info p {
   font-size: 16px;
   color: #747474;
   margin-bottom: 30px;
   line-height: 22.4px;
 }
-
 @media (max-width: 575px) {
   .product-info p {
     font-size: 10px;
     line-height: 14px;
   }
 }
-
 .product-info ul {
   gap: 24px;
   display: grid;
   margin-bottom: 30px;
   grid-template-columns: repeat(2, 1fr);
 }
-
 .product-info ul li {
   display: flex;
   align-items: center;
 }
-
 .product-info ul li span {
   margin-right: 8px;
   display: inline-block;
 }
-
 .product-info ul li p {
   margin: 0;
 }
-
 @media (max-width: 575px) {
   .product-info .button {
     width: 100%;
@@ -917,16 +942,13 @@ body {
   position: relative;
   padding-bottom: 0px;
 }
-
 .testimonial-content {
   margin: 0px auto;
   text-align: center;
 }
-
 .testimonial-content blockquote {
   margin: 0;
 }
-
 .testimonial-content blockquote p {
   margin: auto;
   color: #fff;
@@ -935,13 +957,11 @@ body {
   line-height: 28px;
   padding-bottom: 60px;
 }
-
 @media (max-width: 991px) {
   .testimonial-content blockquote p {
     padding-bottom: 30px;
   }
 }
-
 @media (max-width: 767px) {
   .testimonial-content blockquote p {
     font-size: 12px;
@@ -949,13 +969,11 @@ body {
     max-width: 275px;
   }
 }
-
 .testimonial-content .user {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
 .testimonial-content .user .img {
   width: 35px;
   height: 35px;
@@ -964,13 +982,12 @@ body {
   margin-right: 24px;
   border: 0.87px solid #ffffff;
 }
-
 .testimonial-content .user .img img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-
 .testimonial-content .user h2 {
   color: #fff;
   font-size: 20px;
@@ -978,32 +995,27 @@ body {
   font-family: "nulshock";
   text-transform: uppercase;
 }
-
 @media (max-width: 991px) {
   .testimonial-content .user h2 {
     font-size: 15px;
     line-height: 18px;
   }
 }
-
 .testimonial .swiper {
   padding: 80px 0px;
 }
-
 @media (max-width: 991px) {
   .testimonial .swiper {
     padding: 40px 0px;
     padding-bottom: 85px;
   }
 }
-
 .testimonial .swiper-pagination {
   bottom: 20px;
   left: auto;
   right: 55px;
   text-align: end;
 }
-
 @media (max-width: 991px) {
   .testimonial .swiper-pagination {
     right: 50%;
@@ -1011,7 +1023,6 @@ body {
     transform: translateX(50%);
   }
 }
-
 .testimonial .swiper-pagination-bullet {
   opacity: 1;
   width: 16px;
@@ -1021,8 +1032,6 @@ body {
   margin-right: 3px !important;
   background-color: #fff;
 }
-
 .testimonial .swiper-pagination-bullet-active {
   background-color: #ff0020;
-}
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
